@@ -74,4 +74,18 @@
 
 	</dependencies>
 
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<!-- This configuration allows the JUnit test runner to find the unit tests -->
+				<configuration>
+					<argLine>
+						--add-opens=com.avereon.zenna/com.avereon.zenna.task=ALL-UNNAMED
+					</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
